--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -94,6 +94,8 @@ jobs:
             class: org.apache.dolphinscheduler.api.test.cases.WorkerGroupAPITest
           - name: Project
             class: org.apache.dolphinscheduler.api.test.cases.ProjectAPITest
+          - name: Workflow
+            class: org.apache.dolphinscheduler.api.test.cases.ProcessDefinitionAPITest
     env:
       RECORDING_PATH: /tmp/recording-${{ matrix.case.name }}
     steps:
