--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -96,6 +96,8 @@ jobs:
             class: org.apache.dolphinscheduler.api.test.cases.ProjectAPITest
           - name: Workflow
             class: org.apache.dolphinscheduler.api.test.cases.ProcessDefinitionAPITest
+          - name: Scheduler
+            class: org.apache.dolphinscheduler.api.test.cases.SchedulerAPITest
     env:
       RECORDING_PATH: /tmp/recording-${{ matrix.case.name }}
     steps:
