--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -100,6 +100,8 @@ jobs:
             class: org.apache.dolphinscheduler.api.test.cases.SchedulerAPITest
           - name: Executor
             class: org.apache.dolphinscheduler.api.test.cases.ExecutorAPITest
+          - name: ProcessInstance
+            class: org.apache.dolphinscheduler.api.test.cases.ProcessInstanceAPITest
     env:
       RECORDING_PATH: /tmp/recording-${{ matrix.case.name }}
     steps:
