ci: Require up to date before merging
closed #14412

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -37,6 +37,8 @@ github:
   protected_branches:
     dev:
       required_status_checks:
+        # strict means "Require branches to be up to date before merging".
+        strict: true
         contexts:
           - Build
           - Unit Test
