Support execute shell in different interceptor

--- a/dolphinscheduler-common/src/main/resources/common.properties
+++ b/dolphinscheduler-common/src/main/resources/common.properties
@@ -153,6 +153,8 @@ appId.collect=log
 
 # The default env list will be load by Shell task, e.g. /etc/profile,~/.bash_profile
 shell.env_source_list=
+# The interceptor type of Shell task, e.g. bash, sh, cmd
+shell.interceptor.type=bash
 
 # Whether to enable remote logging
 remote.logging.enable=false
