--- a/deploy/kubernetes/dolphinscheduler/values.yaml
+++ b/deploy/kubernetes/dolphinscheduler/values.yaml
@@ -43,6 +43,7 @@ postgresql:
   postgresqlUsername: "root"
   postgresqlPassword: "root"
   postgresqlDatabase: "dolphinscheduler"
+  driverClassName: "org.postgresql.Driver"
   params: "characterEncoding=utf8"
   persistence:
     enabled: false
@@ -51,6 +52,7 @@ postgresql:
 
 mysql:
   enabled: false
+  driverClassName: "com.mysql.cj.jdbc.Driver"
   auth:
     username: "ds"
     password: "ds"
@@ -82,6 +84,7 @@ externalDatabase:
   password: "root"
   database: "dolphinscheduler"
   params: "characterEncoding=utf8"
+  driverClassName: "org.postgresql.Driver"
 
 ## If not exists external registry, the zookeeper registry will be used by default.
 zookeeper:
