--- a/dolphinscheduler-bom/pom.xml
+++ b/dolphinscheduler-bom/pom.xml
@@ -115,6 +115,7 @@
         <casdoor.version>1.6.0</casdoor.version>
         <azure-sdk-bom.version>1.2.10</azure-sdk-bom.version>
         <protobuf.version>3.17.2</protobuf.version>
+        <com.aliyun.voice.version>2.1.4</com.aliyun.voice.version>
     </properties>
 
     <dependencyManagement>
@@ -895,6 +896,12 @@
                 <artifactId>protobuf-java</artifactId>
                 <version>${protobuf.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>dyvmsapi20170525</artifactId>
+                <version>${com.aliyun.voice.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
     <profiles>
